--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/ayes/artist-management">View on GitHub</a>
 
           <h1 id="project_title">Artist Management System</h1>
-          <h2 id="project_tagline">Artist Booking System Coordination Event (Clients and Account Management)</h2>
+          <h2 id="project_tagline">Artist Booking System Coordination Event.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ayes/artist-management/zipball/master">Download this project as a .zip file</a>
